feat: enable java preview features