@@ -41,11 +41,27 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
+                <configuration>
+                    <release>${java.version}</release>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <compilerArgs>
+                        <!-- For pattern matching -->
+                        --enable-preview
+                    </compilerArgs>
+                </configuration>
             </plugin>
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M6</version>
+                <configuration>
+                    <argLine>
+                        <!-- For pattern matching -->
+                        --enable-preview
+                    </argLine>
+                </configuration>
+
             </plugin>
 
             <plugin>
